fixed sizing and alignment for tweet area component + icons + opacity + buttons

--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -19,6 +19,12 @@
 	--main-border-style: 1px solid rgb(239, 243, 244);
 }
 
+::placeholder{
+	opacity: 0.72;
+	color: black;
+
+}
+
 section,
 div,
 p,
@@ -40,6 +46,10 @@ li {
 .nav-icons {
 	width: 26.25px;
 	height: 26.25px;
+}
+
+.lightIcons{
+	opacity: 0.5;
 }
 
 .hidden500 {
@@ -160,31 +170,29 @@ li {
 			// border: solid purple;
 			justify-content: center;
 			align-items: center;
-			// margin: 5px 0 0 0;
-			//padding: 2px 0 2px 1px;}
+			margin: 0 0 0 0;
+			padding: 0;
 		}
 	}
 
 	&_twitter-logo {
 		display: none;
-		height: 24.4px;
+		//height: 24.4px;
 		padding: 0;
 		margin: 0;
 		//flex: 1 1 auto;
 		fill: rgb(29, 155, 240);
 
 		@media only screen and (500px<=width<=688px) {
-			display: flex;
-			max-width: 50px;
-			height: 30px;
+			display: contents;
+			width: 24px;
+			height: 2rem;
+			border-radius: 0;
 			padding: 0;
 			margin: 0 0 0 0;
 			//flex: 1 1 auto;
 			fill: rgb(29, 155, 240);
-			path {
-				margin: 0;
-				padding: 0;
-			}
+			//border:1px solid green;
 		}
 	}
 	&_ul {
@@ -220,6 +228,10 @@ li {
 			padding: 4;
 			margin-top: 0;
 		}
+	}
+
+	&_li--first-item {
+		margin-top: -2px;
 	}
 
 	&_a {
@@ -435,15 +447,16 @@ button:hover {
 	display: flex;
 	flex-direction: column;
 	width: 100%;
-	height: 108px;
+	height: auto;
 	margin: 0;
-	padding: 4px 14px 0 16px;
+	padding: 4px 14px 7.5px 16px;
 	//border:1px solid red;
 	box-sizing: border-box;
 	border-bottom: var(--main-border-style);
 
 	&_wrapper {
 		@extend .wrappers--flex;
+		padding: 0 0 4px 0;
 		//padding: 0 16px;
 		//border:1px solid purple;
 		box-sizing: border-box;
@@ -452,7 +465,7 @@ button:hover {
 	&_profile-image-box {
 		width: 60px;
 		height: 100%;
-		padding-right: 11px;
+		padding-right: 10.5px;
 		margin: 0 0 0 0;
 	}
 
@@ -465,16 +478,18 @@ button:hover {
 
 	&_tweet-input {
 		width: 100%;
-		height: 100%;
+		height: 124px;
 		display: flex;
-		width: 100%;
-		padding: 4px 0;
+		padding: 18px 0 0 0 ;
 		box-sizing: border-box;
+		border: none;
+		font-size: 20px;
+		font-family:chirp;
 	}
 
 	&_icons-row {
 		display: flex;
-		height: 100%;
+		height: 48px;
 		margin: 0 0 0 62px;
 		padding: 0;
 		justify-content: space-between;
@@ -487,7 +502,7 @@ button:hover {
 		height: 100%;
 		//width: 100%;
 		margin: 0;
-		padding: 0;
+		padding: 12px 0 0 0;
 		//border: 1px solid orange;
 		box-sizing: border-box;
 		list-style: none;
@@ -496,7 +511,7 @@ button:hover {
 	&_li {
 		display: flex;
 		height: 100%;
-		width: 25%;
+		width: 36px;
 		justify-content: center;
 		align-items: center;
 		//border: 1px solid purple;
@@ -505,21 +520,36 @@ button:hover {
 		padding: 0;
 	}
 
+	&_li--first-item {
+		margin-left: -8px;
+	}
+
+	&_anchors {
+		display: flex;
+		width: auto;
+		// width: 100%;
+		// height: 100%;
+		justify-content: start;
+		//border: 1px solid red;
+	}
+
 	&_tweet-icons {
-		height: 65%;
-		width: 65%;
+		width:20px;
+		aspect-ratio: 1/1;
 		margin: 0;
 		padding: 0;
 		fill: rgb(29, 155, 240);
-		stroke-width: 1px;
+		//stroke-width: 1px;
 	}
+
+
 
 	&_wrapper--btn {
 		@extend .wrappers--flex;
 		flex: 0 1 33%;
 		width: 89.83px;
 		justify-content: end;
-		align-items: center;
+		align-items: end;
 		//border: 2px solid green;
 	}
 	&_btn {
@@ -533,10 +563,14 @@ button:hover {
 		height: 36px;
 		color: white;
 		background-color: rgba(29, 155, 240, 0.5);
-		margin: 0;
+		margin: 0 5px 0 0;
 		padding: 0;
 		border: none;
 		//margin-top: 1.5rem;
+	}
+
+	&_btn-text{
+		display: inline-block;
 	}
 }
 
